# Key-Management-System

cmdLine/: CMakeLists.txt  DatabaseInterface.cpp  DatabaseInterface.h  FileSystemInterface.cpp  FileSystemInterface.h  keyMan  main.cpp  main.h  makefile
webInt/: main.js  mongoDB.js  package-lock.json  package.json  server.js
webInt/public/: client.js  elementDeclarations.js  index.html  keysView.js  loginView.js  logsView.js  main.js  settingsView.js  style.css
webInt/ui/keyMan/: README.md  angular.json  package-lock.json  package.json
webInt/ui/keyMan/src/: index.html
webInt/ui/keyMan/src/app/: app.component.spec.ts  app.component.ts
